--- a/src/app/abc-atta/abc-atta.component.html
+++ b/src/app/abc-atta/abc-atta.component.html
@@ -6,6 +6,7 @@
 
                          <p><button mat-button routerLink="/dashboard">{{  'abc-atta.sidebarlink1' | translate}}</button></p>
                          <p><button mat-button  class="active-but" >{{  'abc-atta.sidebarlink2' | translate}}</button></p>
+                         <p><button mat-button  routerLink="/search" > Search </button></p>
 
                </mat-drawer>
                <mat-drawer-content class="content animated fadeIn">
