--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,6 +8,7 @@
                
                     <p><button mat-button class="active-but">{{  'abc-atta.sidebarlink1' | translate}}</button></p>
                     <p><button mat-button routerLink="/abc-atta"  >{{  'abc-atta.sidebarlink2' | translate}}</button></p>
+                    <p><button mat-button routerLink="/search" > Search </button></p>
              
                
           </mat-drawer>
